{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 402,
  "lineage": "e0752a04-6537-89d8-3fea-2f35020105fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ash-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cf0befd2246ed3f",
            "arn": "arn:aws:ec2:us-east-1:619680930396:instance/i-0a0d7022fced4c91d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0d7022fced4c91d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ashec2-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0220b7e074a25e216",
            "private_dns": "ip-10-0-3-249.ec2.internal",
            "private_ip": "10.0.3.249",
            "public_dns": "ec2-54-80-71-228.compute-1.amazonaws.com",
            "public_ip": "54.80.71.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-044deb2d1a46f4522",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de2dcd9de633cb6a",
            "tags": {
              "Name": "Ash-EC2"
            },
            "tags_all": {
              "Name": "Ash-EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e7fba1fc7688c95"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2sg",
            "module.VPC_Module.aws_subnet.public",
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:security-group/sg-00e7fba1fc7688c95",
            "description": "Access in/out of the EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e7fba1fc7688c95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "EC2 Security Group",
            "name_prefix": "",
            "owner_id": "619680930396",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba0448fa0fd3de5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:security-group/sg-0e18e8cd5c4fdc0ad",
            "description": "allow IB/OB access to the database",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e18e8cd5c4fdc0ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "RDS Security Group",
            "name_prefix": "",
            "owner_id": "619680930396",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB security group"
            },
            "tags_all": {
              "Name": "DB security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba0448fa0fd3de5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06782e11747c0aaa0",
            "domain": "vpc",
            "id": "eipalloc-06782e11747c0aaa0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-206-122-238.compute-1.amazonaws.com",
            "public_ip": "34.206.122.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Ash-EIP"
            },
            "tags_all": {
              "Name": "Ash-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC_Module.aws_internet_gateway.igw",
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:internet-gateway/igw-090f6cdb1ce9f889f",
            "id": "igw-090f6cdb1ce9f889f",
            "owner_id": "619680930396",
            "tags": {
              "Name": "Ash-IGW"
            },
            "tags_all": {
              "Name": "Ash-IGW"
            },
            "vpc_id": "vpc-0ba0448fa0fd3de5c"
          },
          "dependencies": [
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06782e11747c0aaa0",
            "connectivity_type": "public",
            "id": "nat-01edc2f5108f5ca4d",
            "network_interface_id": "eni-089056c7946381f44",
            "private_ip": "10.0.3.137",
            "public_ip": "34.206.122.238",
            "subnet_id": "subnet-0de2dcd9de633cb6a",
            "tags": {
              "Name": "Ash-NAT"
            },
            "tags_all": {
              "Name": "Ash-NAT"
            }
          },
          "dependencies": [
            "module.VPC_Module.aws_eip.gw",
            "module.VPC_Module.aws_internet_gateway.igw",
            "module.VPC_Module.aws_subnet.public",
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_route",
      "name": "route-public",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-090f6cdb1ce9f889f",
            "id": "r-rtb-0ec22a409a6a7579d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ec22a409a6a7579d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_Module.aws_internet_gateway.igw",
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:route-table/rtb-08462326ea99f0b9b",
            "id": "rtb-08462326ea99f0b9b",
            "owner_id": "619680930396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01edc2f5108f5ca4d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ash-rt-private"
            },
            "tags_all": {
              "Name": "Ash-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba0448fa0fd3de5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_Module.aws_eip.gw",
            "module.VPC_Module.aws_internet_gateway.igw",
            "module.VPC_Module.aws_nat_gateway.gw",
            "module.VPC_Module.aws_subnet.public",
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0973c88a0c143af5c",
            "route_table_id": "rtb-08462326ea99f0b9b",
            "subnet_id": "subnet-04c18f131943262f1"
          },
          "dependencies": [
            "module.VPC_Module.aws_eip.gw",
            "module.VPC_Module.aws_internet_gateway.igw",
            "module.VPC_Module.aws_nat_gateway.gw",
            "module.VPC_Module.aws_route_table.private",
            "module.VPC_Module.aws_subnet.private1",
            "module.VPC_Module.aws_subnet.public",
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8b20ae089852b0f",
            "route_table_id": "rtb-08462326ea99f0b9b",
            "subnet_id": "subnet-0f3e9002ec7dd63d6"
          },
          "dependencies": [
            "module.VPC_Module.aws_eip.gw",
            "module.VPC_Module.aws_internet_gateway.igw",
            "module.VPC_Module.aws_nat_gateway.gw",
            "module.VPC_Module.aws_route_table.private",
            "module.VPC_Module.aws_subnet.private2",
            "module.VPC_Module.aws_subnet.public",
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0649f991862cb5ba9",
            "route_table_id": "rtb-0ec22a409a6a7579d",
            "subnet_id": "subnet-0de2dcd9de633cb6a"
          },
          "dependencies": [
            "module.VPC_Module.aws_subnet.public",
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:subnet/subnet-04c18f131943262f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c18f131943262f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619680930396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ash-net-private1"
            },
            "tags_all": {
              "Name": "Ash-net-private1"
            },
            "vpc_id": "vpc-0ba0448fa0fd3de5c"
          },
          "dependencies": [
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:subnet/subnet-0f3e9002ec7dd63d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3e9002ec7dd63d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619680930396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ash-net-private2"
            },
            "tags_all": {
              "Name": "Ash-net-private2"
            },
            "vpc_id": "vpc-0ba0448fa0fd3de5c"
          },
          "dependencies": [
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:subnet/subnet-0de2dcd9de633cb6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de2dcd9de633cb6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619680930396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ash-net-public"
            },
            "tags_all": {
              "Name": "Ash-net-public"
            },
            "vpc_id": "vpc-0ba0448fa0fd3de5c"
          },
          "dependencies": [
            "module.VPC_Module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.VPC_Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619680930396:vpc/vpc-0ba0448fa0fd3de5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da0745a719df8cac",
            "default_route_table_id": "rtb-0ec22a409a6a7579d",
            "default_security_group_id": "sg-02fc44b1e71717671",
            "dhcp_options_id": "dopt-d2cf9baa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ba0448fa0fd3de5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec22a409a6a7579d",
            "owner_id": "619680930396",
            "tags": {
              "Name": "Ash-VPC"
            },
            "tags_all": {
              "Name": "Ash-VPC"
            }
          }
        }
      ]
    }
  ]
}